<?xml version="1.0"?>
<package>
  <name>rtk_imu</name>
  <version>1.0.0</version>
  <description>rtk_imu fusion</description>

  <maintainer email="xxx@xxx.xxx">WJ</maintainer>

  <license>BSD</license>
  <author > wj </author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>ros_bridge</build_depend>
  <run_depend>ros_bridge</run_depend>
  
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>sensors_msgs</build_depend>
  <run_depend>sensors_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>


</package>
